fixes extra space appearing between grid rows

--- a/style.css
+++ b/style.css
@@ -80,8 +80,6 @@ input[type=submit]:hover{
   font-family: 'Fragment Mono', monospace;
   display: grid;
   grid-template-columns: 10% 80% 10%;
-  grid-template-rows: 0.7fr 1.5fr 1.3fr 0.5fr;
-  gap: 8px 0px;
   grid-auto-flow: column;
   justify-content: center;
   align-content: center;
@@ -92,7 +90,7 @@ input[type=submit]:hover{
       ". footer .";
   width: 100vw;
 }
-  
+
 .header { grid-area: header; }
 
 .def-div { grid-area: def-div; }
@@ -126,7 +124,7 @@ input[type=submit]:hover{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   margin: 0 18px;
   max-height: 100vh;
 }
@@ -147,9 +145,8 @@ input[type=submit]:hover{
 }
 @media (max-width: 880px) {
   .container{
+    display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 0.7fr 1.5fr 1.3fr 0.5fr;
-    gap: 8px 0px;
     grid-auto-flow: column;
     justify-content: center;
     align-content: center;
@@ -176,6 +173,18 @@ input[type=submit]:hover{
     }
 }
   @media (max-width: 666px) {
+    .container{
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-auto-flow: column;
+      justify-content: center;
+      align-content: center;
+      grid-template-areas:
+          ". header ."
+          ". def-div ."
+          ". ans-div ."
+          ". footer .";
+  }
     .header{
       flex-wrap: wrap;
       border-radius: 0px;
@@ -199,6 +208,9 @@ input[type=submit]:hover{
       line-height: 1.6rem;
       font-size: 1.8rem;
       display: flex;
+    }
+    h2{
+      height: 100vh;
     }
     form{
       display: flex;
